--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="#">Contact with us here!</a> 
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sequi itaque rerum eveniet non, neque nisi? Libero fugiat officia ut veniam, pariatur quidem nemo maiores obcaecati voluptas reprehenderit odit est!</p>
 </body>
 </html>
